CHANGES-1.1.txt
---------------

CHANGES IN CUPS V1.1.15

	- Updated the CUPS license agreement for the new MacOS
	  license exception.
	- The cupsaddsmb program now supports alternative CUPS
	  and SAMBA server names.
	- The PostScript filter now supports the Orientation
	  comment and rotates the page as needed automatically.
	- Revamped the makefiles slightly to use automatically
	  generated dependencies.
	- Build fixes for OS X.
	- The TIFF reading code depended on the newest version
	  of libtiff; now conditionally compile that portion of
	  the loader.
	- The PPD code now decodes all JCL options in the
	  JCLSetup group, not just those options that start with
	  the prefix "JCL".
	- The backends now read print data using the read()
	  system call to ensure that the current page is printed
	  while the next page is being processed.
	- The pdftops filter did not support shading type 3
	  (radial fill) for the "sh" operator.
	- The cups-polld program now throttles the local
	  broadcasts of polled printers and classes so that the
	  local system is not overwhelmed with hundreds of
	  printers and classes all at once.
	- Updated the serial backend to support 230,400 baud for
	  the Linux PPC port.
	- The cupsGetJobs() function wouldn't report completed
	  jobs that did not have a document-format attribute
	  value.
	- The cupsEncodeOptions() function now maintains a table
	  of known boolean and numeric options, and encodes all
	  other options as strings.
	- Now add a newline before the end-of-page code in the
	  PostScript filter; this fixes a problem with files
	  that don't end with a newline.
	- The image filters looked for the "orientation" option
	  instead of the correctly named "orientation-requested"
	  option.
	- The cupsEncodeOptions() function now handles mixed
	  integers and ranges.
	- New translation guide for developers to provide native
	  language support for CUPS.


CHANGES IN CUPS V1.1.14

	- The ippRead() function did not verify that the